# taxonomy_credit_risk

./: .gitignore
documentation/: variables.txt
output/charts/: llm_process.mermaid
scripts/: 01_load_data_wrds.py  02_prepare_data.py  03_scrape_websites.py  04_describe_data.py  05_analyze_data.py  06_check_robustness.py  07_further_checks.py  __process_bibfile.py
taxonomy_credit_risk/: pyproject.toml
taxonomy_credit_risk/taxonomy_credit_risk/: common_crawl.py  parse_xbrl.py  read_data.py  read_data_wrds.py  read_uk_data.py
taxonomy_credit_risk/taxonomy_credit_risk/classification/: taxonomy.py
