[tool.poetry]
name = "taxonomy-credit-risk"
version = "0.1.0"
description = ""
authors = ["max <maximilianjakob.arrich@student.unisg.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
python-dotenv = "^1.0.1"
eikon = "^1.1.18"
refinitiv-data = "^1.6.2"
lxml = "^5.3.0"
tqdm = "^4.67.1"
openpyxl = "^3.1.5"
ultimate-sitemap-parser = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
